# trafilatura

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: check.yml  codeql.yml  release.yml  rolling.yml  test.yml  tests.yml
docs/: Trafilatura_Overview.ipynb  conf.py  deduplication.rst  usage-python.rst
tests/: __init__.py  baseline_tests.py  cli_tests.py  comparison_small.py  deduplication_tests.py  downloads_tests.py  evaldata.py  evaluate.py  feeds_tests.py  filters_tests.py  json_metadata_tests.py  make_json.py  metadata_tests.py  realworld_tests.py  sitemaps_tests.py  spider_tests.py  unit_tests.py  xml_tei_tests.py
tests/cache/: data.riksdagen.se.dokument.h2b51.html
trafilatura/: baseline.py  cli.py  cli_utils.py  core.py  deduplication.py  downloads.py  external.py  feeds.py  htmlprocessing.py  json_metadata.py  main_extractor.py  meta.py  metadata.py  readability_lxml.py  settings.py  sitemaps.py  spider.py  utils.py  xml.py  xpaths.py
