[project]
name = "trafilatura"
version = "2.0.0"
description = "Python & Command-line tool to gather text and metadata on the Web: Crawling, scraping, extraction, output as CSV, JSON, HTML, MD, TXT, XML."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
authors = [
  { name = "Adrien Barbaresi", email = "barbaresi@bbaw.de" },
  { name = "Språkbanken Text", email = "sb-info@svenska.gu.se" }
]
keywords = [
  "corpus",
  "html2text",
  "natural-language-processing",
  "news-crawler",
  "scraper",
  "tei-xml",
  "text-extraction",
  "web-scraping",
  "webscraping",
]
classifiers = [
  # https://pypi.python.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 5 - Production/Stable",
  # 'Development Status :: 6 - Mature',
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Security",
  "Topic :: Text Editors :: Text Processing",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Text Processing :: Markup :: XML",
  "Topic :: Utilities",
]
dependencies = [
  "certifi",
  "charset_normalizer >= 3.4.0",
  "courlan >= 1.3.2",
  "htmldate >= 1.9.2",
  "justext >= 3.0.1",
  # see tests on Github Actions
  "lxml>=5.3.0,<7.0.0",  # See issue https://github.com/adbar/trafilatura/issues/805
  "urllib3 >= 2.6.0, < 3",
]

[project.urls]
"Blog" = "https://adrien.barbaresi.eu/blog/tag/trafilatura.html"
"Homepage" = "https://trafilatura.readthedocs.io"
"Source" = "https://github.com/adbar/trafilatura"
"Tracker" = "https://github.com/adbar/trafilatura/issues"

[project.scripts]
trafilatura = "trafilatura.cli:main"

# Development extras
[project.optional-dependencies]
all = [
  "brotli",
  "cchardet >= 2.1.7; python_version < '3.11'",  # build issue
  "faust-cchardet >= 2.1.19; python_version >= '3.11'",
  "htmldate[speed] >= 1.9.2",
  "py3langid >= 0.3.0",
  "pycurl >= 7.45.3",
  "urllib3[socks]",
  "backports.zstd>=1.0.0; python_version<'3.14'"
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=5.0.0",
  "ruff>=0.15.8",
  "ty>=0.0.26",
  "types-lxml>=2025.8.25",
  "types-urllib3>=1.26.25.14",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests/*tests.py"]

[tool.uv.build-backend]
module-name = ["trafilatura"]
module-root = ""
